--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,19 +3,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -23,108 +91,216 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
+html,
 body {
+	height: 100%;
 	line-height: 1;
 }
-ol, ul {
+
+body {
+	display: flex;
+	flex-direction: column;
+}
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /** end reset css**/
 body {
 	max-width: 1140px;
-	margin:auto;
-	font-family: 'Work Sans' ;
+	margin: auto;
+	font-family: 'Work Sans';
 	font-size: 14px;
 }
+
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
-}
-section {
-	margin: 50px 0
+	margin-top: 20px;
+	margin-bottom: 50px;
+	line-height: 1.3rem;
 }
 
-h1{
+main {
+	flex: 1;
+}
+
+section {
+	margin: 50px 0;
+}
+
+h1 {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
 	font-size: 22px;
+	margin-top: 10px;
 	font-weight: 800;
 	color: #B1663C
 }
 
-h1 > span {
+h1>span {
 	font-family: 'Work Sans';
-	font-size:10px;
+	font-size: 10px;
 	letter-spacing: 0.1em;
-;
 }
 
-h2{
+h2 {
 	font-family: 'Syne';
 	font-weight: 700;
 	font-size: 30px;
-	color: #1D6154
+	color: #1D6154;
 }
+
 nav ul {
 	display: flex;
+	justify-content: center;
 	align-items: center;
 	list-style-type: none;
-
 }
+
 nav li {
+	font-size: 1.1em;
+	cursor: pointer;
+	margin: 0 20px;
+}
+
+nav li img {
+	width: 22px;
+	height: 22px;
+}
+
+nav li a {
+	color: black;
+	text-decoration: none;
+}
+
+nav li a.active {
+	font-weight: 900;
+	color: black;
+}
+
+nav.filters {
+	margin: 50px 0;
+}
+
+nav.filters ul {
 	padding: 0 10px;
-	font-size: 1.2em;
+}
+
+nav.filters li {
+	padding: 0;
+	margin: 0 10px;
+}
+
+nav li button {
+	color: #1D6154;
+	display: flex;
+	align-items: center;
+	min-width: 100px;
+	padding: 0.5rem 1.2rem;
+	border: 1px solid #1D6154;
+	border-radius: 25px;
+	background-color: transparent;
+	cursor: pointer;
+	transition: background-color 0.2s, color 0.2s;
+	/* gap: 10px; */
+	font-family: 'Syne';
+	font-weight: bold;
+	justify-content: center;
+	font-size: 16px;
+}
+
+nav li button.active {
+	background-color: #1D6154;
+	color: white;
+}
+
+nav li button:hover {
+	background-color: #1D6154;
+	color: white;
 }
 
 li:hover {
 	color: #B1663C;
 }
+
 #introduction {
 	display: flex;
 	align-items: center;
+	justify-content: center;
+	gap: 70px;
 }
+
+
 #introduction figure {
-	flex: 1
+	margin: 0;
 }
+
 #introduction img {
+	max-width: 474px;
+	max-height: 355px;
+	width: 100%;
+	height: auto;
 	display: block;
-	margin: auto;
-	width: 80%;
 }
 
 #introduction article {
-	flex: 1
+	max-width: 404px;
 }
+
 #introduction h2 {
 	margin-bottom: 1em;
 }
 
 #introduction p {
 	margin-bottom: 0.5em;
+	font-weight: 500;
+	color: #3D3D3D;
+	line-height: 1.4;
 }
+
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
 .gallery {
 	width: 100%;
 	display: grid;
@@ -137,20 +313,24 @@ li:hover {
 	width: 100%;
 
 }
+
 #contact {
-	width: 50%;
-margin: auto;
+	width: 35%;
+	margin: auto;
 }
-#contact > * {
+
+#contact>* {
 	text-align: center;
 
 }
-#contact h2{
+
+#contact h2 {
 	margin-bottom: 20px;
 }
+
 #contact form {
 	text-align: left;
-	margin-top:30px;
+	margin-top: 30px;
 	display: flex;
 	flex-direction: column;
 }
@@ -161,28 +341,78 @@ margin: auto;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
+
 #contact label {
 	margin: 2em 0 1em 0;
 }
+
 #contact textarea {
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
-input[type="submit"]{
+#login {
+	width: 38%;
+	margin: 50px auto;
+}
+
+#login>* {
+	text-align: center;
+}
+
+#login h2 {
+	margin-bottom: 20px;
+}
+
+#login form {
+	text-align: left;
+	margin-top: 30px;
+	display: flex;
+	flex-direction: column;
+}
+
+#login form a {
+	text-align: center;
+	color: rgb(46, 45, 45);
+}
+
+#login input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#login label {
+	margin: 2em 0 1em 0;
+}
+
+#login textarea {
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+
+input[type="submit"] {
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto ;
+	margin: 2em auto;
 	width: 180px;
 	text-align: center;
-	border-radius: 60px ;
+	border-radius: 60px;
+	cursor: pointer;
 }
 
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
+	margin: 2em;
 }
 
+footer nav ul li {
+	font-family: 'Work Sans';
+	font-size: 16px;
+	font-weight: 300;
+}
